fix: 画像表示の修正

--- a/components/Article/index.module.css
+++ b/components/Article/index.module.css
@@ -147,6 +147,11 @@
   margin: 2rem 0;
 }
 
+.content img {
+  max-width: 100%;
+  height: auto;
+}
+
 .content > figure img {
   max-width: 100%;
   height: auto;
